--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 /* app/globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,4 +9,5 @@ html, body {
     background-color: #f5e9e2;
     height: 100%;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
